--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 ============= version history for Payment::Sisow
 
+version 0.11:
+	- rename 'provider' option to 'payment'
+	- extended the documentation.
+
 version 0.10: Tue Jul  9 17:35:33 CEST 2013
 	- initial release
