--- a/lib/Payment/Sisow.pod
+++ b/lib/Payment/Sisow.pod
@@ -25,12 +25,8 @@ Payment::Sisow - payments via Sisow
 
 Sisow (F<http://sisow.nl>) is a Dutch payment broker, which offers a
 SOAP and a REST interface for communication.  This implementation tries
-to offer an API which will work for both protocols, although currently
-only the SOAP version is realized.
-
-Originally, Sisow focussed on the Dutch cheap and easy iDEAL payment
-system --offered by most Dutch banks-- but later it added other types
-of payments.
+to offer a common API which will work for both protocols, although currently
+only the SOAP version is realized.  The REST interface offers more.
 
 You can test this module using the script in the F<examples/> directory
 contained in the CPAN distribution of C<Payment-Sisow>.  It is an
@@ -88,10 +84,6 @@ errors.
 
 =over 4
 
-=item $obj-E<gt>B<isValidDescription>(STRING)
-
-=item $obj-E<gt>B<isValidPurchaseId>(STRING)
-
 =item $obj-E<gt>B<listIdealBanks>(OPTIONS)
 
 List the banks which offer iDEAL.  With iDEAL, the webshop lists the
@@ -103,11 +95,6 @@ example:
   foreach my $bank ($sisow->listIdealBanks)
   {   print "$bank->{name}\n";
   }
-
-=item $obj-E<gt>B<securedPayment>(QS)
-
-Check whether the payment response was created by Sisow.  QS is a HASH with
-the URI parameters.
 
 =item $obj-E<gt>B<startTransaction>(OPTIONS)
 
@@ -121,7 +108,7 @@ redirected to.
   cancel_url    <return_url>
   description   undef
   notify_url    <return_url>
-  provider      'ideal'
+  payment       'ideal'
   purchase_id   <required>
   return_url    <required>
 
@@ -148,7 +135,7 @@ Pick from:
   podium        Podium Cadeaukaart (The Netherlands)
   ebill         indirect payments
 
-=item provider => PROVIDER
+=item payment => PROVIDER
 
 =item purchase_id => STRING
 
@@ -176,10 +163,63 @@ example:
 
 =back
 
+=head2 Helpers
+
+=over 4
+
+=item $obj-E<gt>B<isValidDescription>(STRING)
+
+=item $obj-E<gt>B<isValidPurchaseId>(STRING)
+
+=item $obj-E<gt>B<securedPayment>(QS)
+
+Check whether the payment response was created by Sisow.  QS is a HASH with
+the URI parameters.
+
+=back
+
+=head1 DETAILS
+
+=head2 About Sisow
+
+Originally, Sisow focussed on the Dutch cheap and easy iDEAL payment
+system --offered by most Dutch banks-- but later it added other types
+of payments:
+
+=over 4
+
+=item * ideal; iDEAL for about 12 Dutch banks (NL)
+
+=item * sofort; SofortBanking/DIRECTebanking (DE)
+
+=item * mistercash; Bancontact/MisterCash (BE)
+
+=item * paypalec; PayPal Express Checkout
+
+=item * webshop; Webshop Gift Card (NL)
+
+=item * fijncadeau; Fijn Cadeaukaart (NL)
+
+=item * podium; Podium Cadeaukaart (NL)
+
+=back
+
+Sisow also offers payment services:
+
+=over 4
+
+=item * ecare; pay after delivery
+
+=item * ebill; digital accept giro
+
+=item * overboeking; pay received accept giro
+
+=back
+
 =head1 SEE ALSO
 
-This module is part of Payment-Sisow distribution version 0.10,
-built on July 09, 2013. Website: F<http://perl.overmeer.net/>
+This module is part of Payment-Sisow distribution version 0.11,
+built on July 10, 2013. Website: F<http://perl.overmeer.net/>
 
 =head1 LICENSE
 
