--- a/lib/Payment/Sisow/SOAP.pod
+++ b/lib/Payment/Sisow/SOAP.pod
@@ -11,22 +11,29 @@ Payment::Sisow::SOAP - payments via the SOAP interface of Sisow
 
 =head1 SYNOPSIS
 
+See L<Payment::Sisow|Payment::Sisow>
+
 =head1 DESCRIPTION
 
 Sisow (F<http://sisow.nl>) is a Dutch payment broker, which offers a SOAP
-and a REST interface for communication.
+and a REST interface for communication.  This class extends their
+common interface with SOAP specific features.  Oh, the REST interface is
+larger...
 
-http://www.sisow.nl/downloads/WebService.pdf
+The full specification of the SOAP interface can be
+L<downloaded from Sisow|http://www.sisow.nl/downloads/WebService.pdf>.
+However, the REST specification is more clear about the content of
+certain fields.
 
-See L<documentation in base class|Payment::Sisow/"DESCRIPTION">.
+See L<documentation in the base class|Payment::Sisow/"DESCRIPTION">.
  
 =head1 METHODS
 
-See L<documentation in base class|Payment::Sisow/"METHODS">.
+See L<documentation in the base class|Payment::Sisow/"METHODS">.
  
 =head2 Constructors
 
-See L<documentation in base class|Payment::Sisow/"Constructors">.
+See L<documentation in the base class|Payment::Sisow/"Constructors">.
  
 =over 4
 
@@ -51,7 +58,7 @@ See L<documentation in base class|Payment::Sisow/"Constructors">.
 
 =head2 Accessors
 
-See L<documentation in base class|Payment::Sisow/"Accessors">.
+See L<documentation in the base class|Payment::Sisow/"Accessors">.
  
 =over 4
 
@@ -69,27 +76,27 @@ See L<Payment::Sisow/"Accessors">
 
 =item $obj-E<gt>B<wsdl>()
 
+Returns the XML and SOAP handler object, used internally.  It is a
+XML::Compile::WSDL11 object.
+
 =back
 
 =head2 Calls
 
-See L<documentation in base class|Payment::Sisow/"Calls">.
+=for trace
+
+local *TRACE;
+if(open TRACE, '>', "/tmp/sisow.$$")
+{   use Data::Dumper; $Data::Dumper::Indent =1; $Data::Dumper::Quotekeys=1;
+    print TRACE Dumper $answer, $trace;
+    close TRACE;
+}
+
+See L<documentation in the base class|Payment::Sisow/"Calls">.
  
 =over 4
 
-=item $obj-E<gt>B<isValidDescription>(STRING)
-
-See L<Payment::Sisow/"Calls">
-
-=item $obj-E<gt>B<isValidPurchaseId>(STRING)
-
-See L<Payment::Sisow/"Calls">
-
 =item $obj-E<gt>B<listIdealBanks>(OPTIONS)
-
-See L<Payment::Sisow/"Calls">
-
-=item $obj-E<gt>B<securedPayment>(QS)
 
 See L<Payment::Sisow/"Calls">
 
@@ -107,8 +114,34 @@ See L<Payment::Sisow/"Calls">
 
 =back
 
+=head2 Helpers
+
+See L<documentation in the base class|Payment::Sisow/"Helpers">.
+ 
+=over 4
+
+=item $obj-E<gt>B<isValidDescription>(STRING)
+
+See L<Payment::Sisow/"Helpers">
+
+=item $obj-E<gt>B<isValidPurchaseId>(STRING)
+
+See L<Payment::Sisow/"Helpers">
+
+=item $obj-E<gt>B<securedPayment>(QS)
+
+See L<Payment::Sisow/"Helpers">
+
+=back
+
 =head1 DETAILS
 
+See L<documentation in the base class|Payment::Sisow/"DETAILS">.
+ 
+=head2 About Sisow
+
+See L<documentation in the base class|Payment::Sisow/"About Sisow">.
+ 
 =head2 errors
 
 Undocumented error codes:   (spec version 1.0)
@@ -117,8 +150,8 @@ Undocumented error codes:   (spec version 1.0)
 
 =head1 SEE ALSO
 
-This module is part of Payment-Sisow distribution version 0.10,
-built on July 09, 2013. Website: F<http://perl.overmeer.net/>
+This module is part of Payment-Sisow distribution version 0.11,
+built on July 10, 2013. Website: F<http://perl.overmeer.net/>
 
 =head1 LICENSE
 
