--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 ============= version history for Payment::Sisow
 
-version 0.11:
+version 0.12: Mon Jan  6 09:41:43 CET 2014
+	- error when ::Sisow gets instantiated.
+	- documentation fixes
+	- removed trace-dump from startTransaction().
+	- securedPayment() now also accept is a list
+	- dependency to new distribution ::WSDL11
+
+version 0.11: Wed Jul 10 11:14:50 CEST 2013
 	- rename 'provider' option to 'payment'
 	- extended the documentation.
 
